--- a/index.html
+++ b/index.html
@@ -16,27 +16,13 @@
             <div class="container">
                 <table>
                     <tr>
-                        <td>
-                            <img src="img/man.jpg" alt="man">
-                        </td>
+                        <td><img src="img/man.jpg" alt="man"></td>
                         <td>
                             <h2>John Doe</h2>
+                            <h3> Software engineer </h3>
                         </td>
-                            <td> <h3> Software engineer </h3></td>
                     </tr>
                 </table>
-            </div>
-        </section>
-
-        <section class="float">
-            <div class="container">
-                <img src="img/man.jpg" alt="man">
-                <h2>
-                    John Doe
-                </h2>
-                <h3>
-                    Software engineer
-                </h3>
             </div>
         </section>
 
@@ -68,6 +54,26 @@
 
         <section class="inline-block">
             <div class="container">
+                <ul>
+                    <li>
+                        <img src="img/man.jpg" alt="man">
+                    </li>
+                    <li>
+                        <h2>
+                            John Doe
+                        </h2>
+                    </li>
+                    <li class="last-child">
+                        <h3>
+                            Software engineer
+                        </h3>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="float">
+            <div class="container">
                 <img src="img/man.jpg" alt="man">
                 <h2>
                     John Doe
@@ -77,6 +83,7 @@
                 </h3>
             </div>
         </section>
+
     </main>
 </body>
 
