add padding in float

--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
                         <h2>
                             John Doe
                         </h2>
-                    </li>
-                    <li class="last-child">
                         <h3>
                             Software engineer
                         </h3>
@@ -75,12 +73,15 @@
         <section class="float">
             <div class="container">
                 <img src="img/man.jpg" alt="man">
-                <h2>
-                    John Doe
-                </h2>
-                <h3>
-                    Software engineer
-                </h3>
+                <div class="text">
+                    <h2>
+                        John Doe
+                    </h2>
+                    <h3>
+                        Software engineer
+                    </h3>
+                </div>
+
             </div>
         </section>
 
